--- a/web/index.html
+++ b/web/index.html
@@ -11,11 +11,10 @@
 
   <script type="text/javascript">
     var ros;
+    var cmdVel;
     var twist;
-    var twistMsg;
     var motorSpeed;
     var turnSpeed;
-    var moveDuration;
 
     function init() {
 
@@ -51,13 +50,13 @@
         document.getElementById('statusMessage').innerHTML = "<p style='color:red'>Connection closed.</p>";
       });
 
-      twistpub = new ROSLIB.Topic({
+      cmdVel = new ROSLIB.Topic({
         ros: ros,
-        name: '/hcri-walkerbot/twist',
+        name: '/cmd_vel',
         messageType: 'geometry_msgs/Twist'
       });
 
-      twistMsg = new ROSLIB.Message({});
+      twist = new ROSLIB.Message({});
 
       imageStream();
     }
@@ -89,9 +88,11 @@
         <br/>
         <br/>
 
-        1. Drag Motor Speed Slider
+        1. Drag Motor Speed Slider and press "Set"
+        <br/><br/>
+
         <div class="slidecontainer">
-          <input type="range" min="0" max="10" value="0" class="slider" id="motorSpeedID" onchange="setMotorSpeed()" /> Motor Speed Value: <span id="motorSpeedSliderOutput"></span>&nbsp;<input type="submit" value="Set" name="submit" onclick="setMotorSpeed()"
+          <input type="range" min="0" max="2" step=0.1 value="0" class="slider" id="motorSpeedID" onchange="setMotorSpeed()" /> Motor Speed Value: <span id="motorSpeedSliderOutput"></span>&nbsp;<input type="submit" value="Set" name="submit" onclick="setMotorSpeed()"
           />
         </div>
 
@@ -109,9 +110,11 @@
         <br/>
         <br/>
 
-        2. Drag Turn Speed Slider
+        2. Drag Turn Speed Slider and press "Set"
+        <br/><br/>
+
         <div class="slidecontainer">
-          <input type="range" min="0" max="10" value="0" class="slider" id="turnSpeedID" onchange="setTurnSpeed()" /> Turn Speed Value: <span id="turnSpeedSliderOutput"></span>&nbsp;<input type="submit" value="Set" name="submit" onclick="setTurnSpeed()"
+          <input type="range" min="0" max="2" step=0.1 value="0" class="slider" id="turnSpeedID" onchange="setTurnSpeed()" /> Turn Speed Value: <span id="turnSpeedSliderOutput"></span>&nbsp;<input type="submit" value="Set" name="submit" onclick="setTurnSpeed()"
           />
         </div>
 
@@ -129,23 +132,6 @@
         <br/>
         <br/>
 
-        3. Drag Move Duration
-        <div class="slidecontainer">
-          <input type="range" min="0" max="10" value="0" class="slider" id="moveDurationID" onchange="setMoveDuration()" /> Move Duration Value: <span id="moveDurationSliderOutput"></span>&nbsp;<input type="submit" value="Set" name="submit" onclick="setMoveDuration()"
-          />
-        </div>
-
-        <script>
-          var moveDurationSlider = document.getElementById("moveDurationID");
-          var moveDurationOutput = document.getElementById("moveDurationSliderOutput");
-          moveDurationOutput.innerHTML = moveDurationSlider.value; // Display the default slider value
-
-          // Update the current slider value (each time you drag the slider handle)
-          moveDurationSlider.oninput = function() {
-            moveDurationOutput.innerHTML = this.value;
-          }
-        </script>
-        <br/>
       </td>
     </tr>
 
@@ -163,41 +149,112 @@
 
         function setTurnSpeed() {
           turnSpeed = document.getElementById('turnSpeedID').value;
-        }
-
-        function setMoveDuration() {
-          moveDuration = document.getElementById('moveDurationID').value;
+          console.log(turnSpeed);
         }
 
         function publishTurnMotorsOff() {
           console.log("motors turned off");
-          twistMsg.linear.x = 0
-          twistMsg.angular.z = 0
-          twistpub.publish(twistMsg);
+
+        twist = ROSLIB.Message({
+             linear : {
+               x : 0.0,
+               y : 0.0,
+               z : 0.0
+             },
+             angular : {
+               x : -0.0,
+               y : -0.0,
+               z : -0.0
+             }
+           });
+
+          //twist.linear.x = 0
+          //twist.angular.z = 0
+          cmdVel.publish(twist);
         }
 
         function publishMoveForwards() {
           console.log("move forward");
-          twistMsg.linear.x = motorSpeed
-          twistpub.publish(twistMsg);
+
+          twist = ROSLIB.Message({
+               linear : {
+                 x : motorSpeed,
+                 y : 0.0,
+                 z : 0.0
+               },
+               angular : {
+                 x : -0.0,
+                 y : -0.0,
+                 z : -0.0
+               }
+             });
+
+          //twist.linear.x = motorSpeed
+          cmdVel.publish(twist);
         }
 
         function publishMoveBackwards() {
           console.log("move backwards");
-          twistMsg.linear.x = (-1) * motorSpeed
-          twistpub.publish(twistMsg);
+
+          //motorSpeed = (-1) * motorSpeed
+
+          twist = ROSLIB.Message({
+               linear : {
+                 x : -motorSpeed,
+                 y : 0.0,
+                 z : 0.0
+               },
+               angular : {
+                 x : -0.0,
+                 y : -0.0,
+                 z : -0.0
+               }
+             });
+
+          //twist.linear.x = (-1) * motorSpeed
+          cmdVel.publish(twist);
         }
 
         function publishTurnLeft() {
           console.log("turn left");
-          twistMsg.angular.z = turnSpeed
-          twistpub.publish(twistMsg);
+
+          twist = ROSLIB.Message({
+               linear : {
+                 x : 0.0,
+                 y : 0.0,
+                 z : 0.0
+               },
+               angular : {
+                 x : -0.0,
+                 y : -0.0,
+                 z : turnSpeed
+               }
+             });
+
+          //twist.angular.z = turnSpeed
+          cmdVel.publish(twist);
         }
 
         function publishTurnRight() {
           console.log("turn right");
-          twistMsg.angular.z = (-1) * turnSpeed
-          twistpub.publish(twistMsg);
+
+          //turnSpeed = (-1) * turnSpeed
+
+          twist = ROSLIB.Message({
+               linear : {
+                 x : 0.0,
+                 y : 0.0,
+                 z : 0.0
+               },
+               angular : {
+                 x : -0.0,
+                 y : -0.0,
+                 z : -turnSpeed
+               }
+             });
+
+          //twist.angular.z = (-1) * turnSpeed
+          cmdVel.publish(twist);
         }
       </script>
 
